[project]
name = "ch_benchviz"
version = "0.1.0"
description = "A Streamlit-based tool for visualizing and comparing ClickHouse query benchmark results"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "sqlparse>=0.5.1",
    "streamlit>=1.39.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
